wazuh-mgr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-manager
  template:
    metadata:
      labels:
        app: wazuh-manager
    spec:
      containers:
      - name: wazuh-manager
        image: wazuh/wazuh:latest
        ports:
        - containerPort: 55000apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-manager
  template:
    metadata:
      labels:
        app: wazuh-manager
    spec:
      containers:
      - name: wazuh-manager
        image: wazuh/wazuh:latest
        ports:
        - containerPort: 55000
