web-interior.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-interior
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-interior
  template:
    metadata:
      labels:
        app: web-interior
    spec:
      containers:
      - name: web-interior
        image: learndevops083/interior:latest
        ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: web-interior
spec:
  selector:
    app: web-interior
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      #nodePort: 30200
